agregue el colisionador, lo deje comentado porque no esta andando, tengo que ver bien que es lo que esta pinchando.

--- a/AlumnoEjemplos.csproj
+++ b/AlumnoEjemplos.csproj
@@ -88,8 +88,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Jet_Pilot\Colisionador.cs" />
-    <Compile Include="Jet_Pilot_Terrain\EjemploTerrain.cs" />
-    <Compile Include="Jet_Pilot_Terrain\Terrain.cs" />
+    <Compile Include="Jet_Pilot\FreeCam.cs" />
+    <Compile Include="Jet_Pilot\Plane.cs" />
+    <Compile Include="Jet_Pilot\SkyBox.cs" />
+    <Compile Include="Jet_Pilot\Terrain.cs" />
     <Compile Include="Jet_Pilot\EjemploAlumno.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
